# FontMod

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ConfigFile.h  DefConfigFile.hpp  DllStubArm.asm  DllStubX86.asm  FontMod.cpp  FontMod.sln  FontMod.vcxproj  FontMod.vcxproj.filters  FontMod.yaml  HiDPI.h  LICENSE  README.md  README.zh_CN.md  README.zh_TW.md  Resource.rc  RymlCallbacks.hpp  TGFont.cpp  TGFont.ini  TGFont.json  TGFont.sln  TGFont.vcxproj  TGFont.vcxproj.filters  Util.hpp  build.bat  detours.cmake  dllstub.asm  dllstub.def  dllstub.hpp  framework.h  pch.h  rapidjson_error_zh_CN.h  resource.h  winmm.asm  winmm.h  winmm.hpp
.github/: remove-file-location.patch  update-detours.patch
.github/workflows/: build.yaml
rapidjson/error/: zh_CN.h
